--- a/style.css
+++ b/style.css
@@ -538,9 +538,9 @@ img {
   display: block;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/2 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #000000;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -784,7 +784,7 @@ i {
 .products {
   max-width: 1050px;
   width: 100%;
-  height: 500px;
+  height: 425px;
   justify-content: space-around;
   margin: 0 auto;
   margin-bottom: 32px;
@@ -857,9 +857,74 @@ i {
  font-family: "Nanum Pen Script", cursive;
 }
 
+
 .checkout-button{
-  width: 200px;
-  height: 50px;
+  width: 300px;
+  height: 100px;
   float: right;
   margin-right: 64px;
+  align-self: center;
+
+  background: transparent;
+  padding: 1rem 2rem;
+  transition: all 0.5s ease;
+  color: #41403e;
+  font-size: 1.1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  outline: none;
+  text-decoration: none;
+  box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
+  border-radius: 15px 225px 15px 255px/ 225px 15px 255px 15px;
+  border: solid 4px #41403e;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
+  }
+}
+
+
+form{
+  width: 800px;
+}
+
+input[type=text],input[type=number], select, textarea {
+  width: 70%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+input[type=text] input[type=number]:focus {
+  border: 2px solid #555;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
 }
