--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
   background-color: rgba(158, 158, 152, 0.664);
 }
 
+.notDisplay{
+  display: none;
+}
+
 .unselectable {
   user-select: none;
 }
@@ -96,6 +100,11 @@ body {
   list-style-type: none;
   justify-content: space-around;
   margin: 24px 0;
+}
+
+.sections-buttons{
+  display: flex;
+  justify-content: space-between;
 }
 
 .section-buttons {
