--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ body {
   width: 150px;
   height: 150px;
   padding: 0 24px;
+  cursor: pointer;
 }
 
 .main-body {
@@ -475,10 +476,50 @@ img {
   transform: translate3d(20px, 30px, 250px);
 }
 
-#copyright-text{
-  text-align: center;
+.terms-and-copyright{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #6b6a68;
   font-family: "Nanum Pen Script", cursive;
+}
+
+#terms{
+  cursor: pointer;
+  text-align: center;
+  width: fit-content;
+  margin-bottom: 12px;
+  font-size: 24px;
+  text-decoration: underline;
+}
+
+.terms-container{
+  width: 60vw;
+  height: 55vh;
+  padding: 0 24px 24px 24px;
+  margin-top: 12px;
+  overflow-y: scroll;
+  font-size: 18px;
+}
+
+.terms-container > p:last-child {
+  margin-top: 24px;
+}
+
+.terms-container > h2{
+  margin-bottom: 6px;
+  margin-top: 24px;
+  font-size: 24px;
+  letter-spacing: 0.5px;
+}
+
+.info-collect{
+  margin: 12px 0;
+}
+
+.info-collect > li{
+  margin-left: 24px;
+  margin-bottom: 6px;
 }
 
 #popup-window {
