--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan&family=Nanum+Pen+Script&family=Ubuntu&display=swap");
 
+
+/* DISCOUNT */
+.discount{
+  text-decoration: line-through;
+}
+
 * {
   margin: 0;
   padding: 0;
